# django_mysql

./: Dockerfile  docker-compose.yml  pyproject.toml
app/account/: admin.py  models.py  views.py
app/mysql_django/: asgi.py  settings.py  urls.py  wsgi.py
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo9
mysql/mysql/: general_log_380.sdi  slow_log_382.sdi
mysql/mysql_db/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.ibd
mysql/performance_schema/: accounts_303.sdi  binary_log_trans_347.sdi  cond_instances_240.sdi  data_lock_waits_319.sdi  data_locks_318.sdi  error_log_241.sdi  events_errors_su_297.sdi  events_errors_su_298.sdi  events_errors_su_299.sdi  events_errors_su_300.sdi  events_errors_su_301.sdi  events_stages_cu_269.sdi  events_stages_hi_270.sdi  events_stages_hi_271.sdi  events_stages_su_272.sdi  events_stages_su_273.sdi  events_stages_su_274.sdi  events_stages_su_275.sdi  events_stages_su_276.sdi  events_statement_277.sdi  events_statement_278.sdi  events_statement_279.sdi  events_statement_280.sdi  events_statement_281.sdi  events_statement_282.sdi  events_statement_283.sdi  events_statement_284.sdi  events_statement_285.sdi  events_statement_286.sdi  (+81 more)
(+2 files in other folders)
